Fix max-width & added nowrap

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -4,6 +4,7 @@
     left: 50%;
     transform: translateX(var(--calculatedOffset));
     font-size: xxx-large;
+    white-space: nowrap;
 }
 
 .login-div {
